--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 /* add CSS class and element and selectors here */
-@import url ('https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet"');
+@import url('https://fonts.googleapis.com/css?family=Shrikhand');
 body {
       background-color: lightblue;
       font-size: 150%;
     }
     #title-section {font-size: 'Shrikhand', cursive;}
-  .info-section  {font-family: 'Shrikhand', cursive;}
-  
+    
+  .info-section {font-family: 'Shrikhand', cursive;}
+
+\
